fix: fixing z-index issues and min-height on fieldset

--- a/frontend/components/messages/msg.module.css
+++ b/frontend/components/messages/msg.module.css
@@ -7,6 +7,7 @@
     top: 1vw;
     width: fit-content;
     animation: msg_anim 500ms forwards;
+    z-index: 5 !important;
 }
 
 @keyframes msg_anim {
