--- a/frontend/components/navbar/navbar.module.css
+++ b/frontend/components/navbar/navbar.module.css
@@ -11,7 +11,8 @@
     padding: 10px;
     background-color: var(--midtone);
     color: white;
-    z-index: 10;
+    z-index: 1;
+    margin-bottom: 4vh;
 }
 
 .side
